我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>刘沫池的个人网站</title>
 <meta name="description" content="">
-<meta name="author" content="">
+<meta name="keywords" content="刘沫池,刘默池,刘墨池,刘">
 
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
@@ -161,90 +161,90 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_7444.JPG" title="团队至南京参加定向越野大赛，获得男子组一等奖，团体二等奖" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_7444.JPG" class="img-responsive" alt="学生工作"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_8894.JPG" title="黑龙江大学汇文楼一角" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>校园景色</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_8894.JPG" class="img-responsive" alt="校园景色"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/03.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_8766.JPG" title="黑大第二期青马工程菁英班学员，在阳光讲坛参加活动" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_8766.JPG" class="img-responsive" alt="学生工作"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_7620.JPG" title="担任新生党院办主任，在迎接2016级新生报道，准备报道工作" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/04.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_7620.JPG" class="img-responsive" alt="学生工作"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_8896.JPG" title="黑大主楼正面" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>校园景色</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/05.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_8896.JPG" class="img-responsive" alt="校园景色"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/06.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_8875.JPG" title="联通广场前的毕业照" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>毕业照</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/06.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_8875.JPG" class="img-responsive" alt="毕业照"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/07.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_8893.JPG" title="联通广场前的黑大2号教学楼" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>校园景色</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_8893.JPG" class="img-responsive" alt="校园景色"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/IMG_8140.JPG" title="在任学院学生会主席时策划组织2016级新生迎新晚会，成功举办后所有演职人员、工作人员大合影" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>大学生活</h4>
                 <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/08.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/IMG_8140.JPG" class="img-responsive" alt="学生工作"> </a> </div>
           </div>
         </div>
       </div>
