--- a/Resume/index.html
+++ b/Resume/index.html
@@ -471,23 +471,23 @@
 <div id="testimonials" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Testimonials</h2>
+      <h2>thggh</h2>
       <hr>
     </div>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div id="testimonial" class="owl-carousel owl-theme">
           <div class="item"> <img class="img-circle" src="img/clients/01.jpg" alt=""/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-            <p><strong>John DOE</strong>, CEO, Company.</p>
+            <p>111111</p>
+            <p><strong>aa</strong>bb</p>
           </div>
           <div class="item"> <img class="img-circle" src="img/clients/02.jpg" alt=""/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-            <p><strong>Jenny DOE</strong>, CEO, Company.</p>
+            <p>2222</p>
+            <p><strong></strong></p>
           </div>
           <div class="item"> <img class="img-circle" src="img/clients/03.jpg" alt=""/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
-            <p><strong>John DOEn</strong>, CEO, Company.</p>
+            <p>3333</p>
+            <p><strong></strong></p>
           </div>
         </div>
       </div>
