--- a/Resume/index.html
+++ b/Resume/index.html
@@ -74,7 +74,7 @@
           <li> <a class="page-scroll" href="#portfolio">大学生活</a> </li>
           <li> <a class="page-scroll" href="#skills">专业技能</a> </li>
           <li> <a class="page-scroll" href="#resume">项目经验</a> </li>
-          <li> <a class="page-scroll" href="#testimonials">暂时待定</a> </li>
+          <li> <a class="page-scroll" href="#testimonials">团队合作</a> </li>
           <li> <a class="page-scroll" href="#contact">联系作者</a> </li>
         </ul>
       </div>
@@ -471,7 +471,7 @@
 <div id="testimonials" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>thggh</h2>
+      <h2>团队合作</h2>
       <hr>
     </div>
     <div class="row">
