我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -74,7 +74,7 @@
           <li> <a class="page-scroll" href="#portfolio">大学生活</a> </li>
           <li> <a class="page-scroll" href="#skills">专业技能</a> </li>
           <li> <a class="page-scroll" href="#resume">项目经验</a> </li>
-          <li> <a class="page-scroll" href="#testimonials">团队合作</a> </li>
+          <li> <a class="page-scroll" href="#testimonials">成员概要</a> </li>
           <li> <a class="page-scroll" href="#contact">联系作者</a> </li>
         </ul>
       </div>
@@ -471,23 +471,29 @@
 <div id="testimonials" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>团队合作</h2>
+      <h2>成员概要</h2>
       <hr>
     </div>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div id="testimonial" class="owl-carousel owl-theme">
+          <div class="item"> <img class="img-circle" src="img/clients/03.jpg" alt=""/>
+            <p>本人</p>
+            <p><strong>web前端开发工程师</strong></p>
+          </div>
           <div class="item"> <img class="img-circle" src="img/clients/01.jpg" alt=""/>
-            <p>111111</p>
-            <p><strong>aa</strong>bb</p>
+            <p>安波</p>
+            <p><strong>数据库管理员，创新创业设计，校园交友网站‘’市场调研部分，搜集全国知名大学基本信息汇总并负责数据库部分</strong></p>
           </div>
           <div class="item"> <img class="img-circle" src="img/clients/02.jpg" alt=""/>
-            <p>2222</p>
-            <p><strong></strong></p>
+            <p>聂爱迪</p>
+            <p><strong>UI设计师，项目中UI设计的主要扮演者，设计‘’交友网站的图标，参考国外网站设计风格，形成团队自己的模式，丰富
+            网站功能实现
+            </strong></p>
           </div>
           <div class="item"> <img class="img-circle" src="img/clients/03.jpg" alt=""/>
-            <p>3333</p>
-            <p><strong></strong></p>
+            <p>毕元铭</p>
+            <p><strong>php开发工程师，</strong></p>
           </div>
         </div>
       </div>
