我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -342,9 +342,9 @@
               <div class="timeline-body">
                 <ul>
                   <li class="cc"><a href="test1/3d轮播图.html" target="_blank">动画3D轮播</a></li>
-                  <li><a href="test2/照片墙合并.html" target="_blank">科比的照片墙</a></li>
+                  <li><a href="test2/照片墙.html" target="_blank">闪烁照片墙</a></li>
                   <li><a href="test3/旋转的立方体.html" target="_blank">旋转的立方体</a></li>
-                  <li><a href="#" target="_blank">旋转木马</a></li>
+                  <li><a href="test4/旋转木马.html" target="_blank">旋转木马</a></li>
                   <li><a href="#" target="_blank">简易画图工具</a></li>
                 </ul>
               </div>
@@ -479,15 +479,15 @@
         <div id="testimonial" class="owl-carousel owl-theme">
           <div class="item"> <img class="img-circle" src="img/clients/03.jpg" alt=""/>
             <p>本人</p>
-            <p><strong>web前端开发工程师</strong></p>
+            <p><strong>web前端开发工程师，负责项目中的前台页面开发</strong></p>
           </div>
           <div class="item"> <img class="img-circle" src="img/clients/01.jpg" alt=""/>
             <p>安波</p>
-            <p><strong>数据库管理员，创新创业设计，校园交友网站‘’市场调研部分，搜集全国知名大学基本信息汇总并负责数据库部分</strong></p>
+            <p><strong>数据库管理员，创新创业设计，校园交友网站‘同窗网’市场调研部分，搜集全国知名大学基本信息汇总并负责数据库部分</strong></p>
           </div>
           <div class="item"> <img class="img-circle" src="img/clients/02.jpg" alt=""/>
             <p>聂爱迪</p>
-            <p><strong>UI设计师，项目中UI设计的主要扮演者，设计‘’交友网站的图标，参考国外网站设计风格，形成团队自己的模式，丰富
+            <p><strong>UI设计师，项目中UI设计的主要扮演者，设计‘同窗网’交友网站的图标，参考国外网站设计风格，形成团队自己的模式，丰富
             网站功能实现
             </strong></p>
           </div>
