--- a/Resume/index.html
+++ b/Resume/index.html
@@ -477,23 +477,23 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div id="testimonial" class="owl-carousel owl-theme">
-          <div class="item"> <img class="img-circle" src="img/clients/03.jpg" alt=""/>
+          <div class="item"> <img class="img-circle" src="img/clients/04.JPG" alt=""/>
             <p>本人</p>
             <p><strong>web前端开发工程师，负责项目中的前台页面开发</strong></p>
           </div>
-          <div class="item"> <img class="img-circle" src="img/clients/01.jpg" alt=""/>
+          <div class="item"> <img class="img-circle" src="img/clients/01.png" alt=""/>
             <p>安波</p>
-            <p><strong>数据库管理员，创新创业设计，校园交友网站‘同窗网’市场调研部分，搜集全国知名大学基本信息汇总并负责数据库部分</strong></p>
+            <p><strong>数据库管理员，创新创业设计，校园交友网站‘E-friend’市场调研部分，搜集全国知名大学基本信息汇总并负责数据库部分</strong></p>
           </div>
-          <div class="item"> <img class="img-circle" src="img/clients/02.jpg" alt=""/>
+          <div class="item"> <img class="img-circle" src="img/clients/02.png" alt=""/>
             <p>聂爱迪</p>
-            <p><strong>UI设计师，项目中UI设计的主要扮演者，设计‘同窗网’交友网站的图标，参考国外网站设计风格，形成团队自己的模式，丰富
+            <p><strong>UI设计师，项目中UI设计的主要扮演者，设计‘E-friend’交友网站的图标，参考国外网站设计风格，形成团队自己的模式，丰富
             网站功能实现
             </strong></p>
           </div>
-          <div class="item"> <img class="img-circle" src="img/clients/03.jpg" alt=""/>
+          <div class="item"> <img class="img-circle" src="img/clients/03.png" alt=""/>
             <p>毕元铭</p>
-            <p><strong>php开发工程师，</strong></p>
+            <p><strong>后端开发工程师</strong></p>
           </div>
         </div>
       </div>
